# Bewerbungs_Git

Bewerbungs Git/: bank.py  camel.py  coke.py  deep.py  einstein.py  fuel.py  grocery.py  meal.py  nutrition.py  outdated.py  plates.py  quiz.py  readability.c  scrabble.c  taqueria.py  tip.py  twttr.py
Bewerbungs Git/internetseite/: website.py
Bewerbungs Git/iss_flight_tracker/: LICENSE  README.md  pyproject.toml
Bewerbungs Git/iss_flight_tracker/src/: main.py  model.py  view.py
